[package]
name = "crossplane-types-upbound-gcp-compute"
version = "0.2.0"
authors = ["Shuttle <engineering@shuttle.dev>"]
edition = "2024"
license = "Apache"
publish = true
repository = "https://github.com/shuttle-hq/crossplane-types-rs"

[package.metadata.crossplane.provider]
name = "compute"
family = "gcp"
src-version = "1.14.0"
managed-resources = [
    "addresses",
    "attacheddisks",
    "autoscalers",
    "backendbuckets",
    "backendbucketsignedurlkeys",
    "backendservices",
    "backendservicesignedurlkeys",
    "diskiammembers",
    "diskresourcepolicyattachments",
    "disks",
    "externalvpngateways",
    "firewallpolicies",
    "firewallpolicyassociations",
    "firewallpolicyrules",
    "firewalls",
    "forwardingrules",
    "globaladdresses",
    "globalforwardingrules",
    "globalnetworkendpointgroups",
    "globalnetworkendpoints",
    "havpngateways",
    "healthchecks",
    "httphealthchecks",
    "httpshealthchecks",
    "imageiammembers",
    "images",
    "instancefromtemplates",
    "instancegroupmanagers",
    "instancegroupnamedports",
    "instancegroups",
    "instanceiammembers",
    "instances",
    "instancetemplates",
    "interconnectattachments",
    "managedsslcertificates",
    "networkendpointgroups",
    "networkendpoints",
    "networkfirewallpolicies",
    "networkfirewallpolicyassociations",
    "networkfirewallpolicyrules",
    "networkpeeringroutesconfigs",
    "networkpeerings",
    "networks",
    "nodegroups",
    "nodetemplates",
    "packetmirrorings",
    "perinstanceconfigs",
    "projectdefaultnetworktiers",
    "projectmetadata",
    "projectmetadataitems",
    "regionautoscalers",
    "regionbackendservices",
    "regiondiskiammembers",
    "regiondiskresourcepolicyattachments",
    "regiondisks",
    "regionhealthchecks",
    "regioninstancegroupmanagers",
    "regionnetworkendpointgroups",
    "regionnetworkendpoints",
    "regionnetworkfirewallpolicies",
    "regionnetworkfirewallpolicyassociations",
    "regionperinstanceconfigs",
    "regionsslcertificates",
    "regionsslpolicies",
    "regiontargethttpproxies",
    "regiontargethttpsproxies",
    "regiontargettcpproxies",
    "regionurlmaps",
    "reservations",
    "resourcepolicies",
    "routerinterfaces",
    "routernats",
    "routerpeers",
    "routers",
    "routes",
    "securitypolicies",
    "serviceattachments",
    "sharedvpchostprojects",
    "sharedvpcserviceprojects",
    "snapshotiammembers",
    "snapshots",
    "sslcertificates",
    "sslpolicies",
    "subnetworkiammembers",
    "subnetworks",
    "targetgrpcproxies",
    "targethttpproxies",
    "targethttpsproxies",
    "targetinstances",
    "targetpools",
    "targetsslproxies",
    "targettcpproxies",
    "urlmaps",
    "vpngateways",
    "vpntunnels",
]
[lints.rust]
unknown_lints = "allow"
unsafe_code = "forbid"

[lints.rust.rust_2018_idioms]
level = "deny"
priority = -1

[dependencies.k8s-openapi]
version = "0.25"
features = ["schemars"]
default-features = false

[dependencies.kube]
version = "1.1.0"
features = ["derive"]
default-features = false

[dependencies.schemars]
version = "0.8.22"
features = ["chrono", "derive"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]
default-features = false

[dependencies.serde_json]
version = "1"
default-features = false

[dev-dependencies]
k8s-openapi = { version = "0.25", features = ["latest"] }
