[package]
name = "crossplane-types-upbound-aws-apigateway"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "apigateway"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "accounts",
    "apikeys",
    "authorizers",
    "basepathmappings",
    "clientcertificates",
    "deployments",
    "documentationparts",
    "documentationversions",
    "domainnames",
    "gatewayresponses",
    "integrationresponses",
    "integrations",
    "methodresponses",
    "methods",
    "methodsettings",
    "models",
    "requestvalidators",
    "resources",
    "restapipolicies",
    "restapis",
    "stages",
    "usageplankeys",
    "usageplans",
    "vpclinks",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
