[package]
name = "crossplane-types-upbound-aws-apigatewayv2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "apigatewayv2"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "apimappings",
    "apis",
    "authorizers",
    "deployments",
    "domainnames",
    "integrationresponses",
    "integrations",
    "models",
    "routeresponses",
    "routes",
    "stages",
    "vpclinks",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
