[package]
name = "crossplane-types-upbound-aws-cognitoidp"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "cognitoidp"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "identityproviders",
    "resourceservers",
    "riskconfigurations",
    "usergroups",
    "useringroups",
    "userpoolclients",
    "userpooldomains",
    "userpools",
    "userpooluicustomizations",
    "users",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["latest", "schemars"] }
