[package]
name = "crossplane-types-upbound-aws-devicefarm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "devicefarm"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "devicepools",
    "instanceprofiles",
    "networkprofiles",
    "projects",
    "testgridprojects",
    "uploads",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["latest", "schemars"] }
