[package]
name = "crossplane-types-upbound-aws-dlm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "dlm"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "lifecyclepolicies",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true, features = ["schemars"] }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["latest"] }
