[package]
name = "crossplane-types-upbound-aws-elbv2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "elbv2"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "lblistenercertificates",
    "lblistenerrules",
    "lblisteners",
    "lbs",
    "lbtargetgroupattachments",
    "lbtargetgroups",
    "lbtruststores",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
