[package]
name = "crossplane-types-upbound-aws-iam"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }

[package.metadata.crossplane.provider]
name = "iam"
family = "aws"
src-version = "1.21.1"
managed-resources = [
    "accesskeys",
    "accountaliases",
    "accountpasswordpolicies",
    "groupmemberships",
    "grouppolicyattachments",
    "groups",
    "instanceprofiles",
    "openidconnectproviders",
    "policies",
    "rolepolicies",
    "rolepolicyattachments",
    "roles",
    "samlproviders",
    "servercertificates",
    "servicelinkedroles",
    "servicespecificcredentials",
    "signingcertificates",
    "usergroupmemberships",
    "userloginprofiles",
    "userpolicyattachments",
    "users",
    "usersshkeys",
    "virtualmfadevices",
]

[lints]
workspace = true

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
